--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
 <style>
 
 /* ========= RESET ========= */
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:"Inter",sans-serif;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Inter",sans-serif}
 
 /* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  overflow-y:scroll;
   scroll-snap-type:y mandatory;
 }
 
@@ -54,8 +48,6 @@ nav span{
 .section{
   min-height:100vh;
   scroll-snap-align:start;
-  display:flex;
-  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
 
@@ -66,11 +58,7 @@ nav span{
 }
 
 /* ========= HERO ========= */
-.section.hero{
-  align-items:center;
-}
-
-.section.hero h1{
+.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
   margin-left:-4px;
@@ -84,54 +72,46 @@ nav span{
   color:#777;
 }
 
-/* ========= TYPO ========= */
-h1{
-  font-size:clamp(70px,6vw,120px);
-  font-weight:500;
-}
-
-/* ========= ABOUT ========= */
-.about{
-  display:flex;
-  margin-top:12px;
-}
-
-.about p{
-  max-width:700px;
+/* ========= TEXT ========= */
+p{
   font-size:15px;
   line-height:1.6;
   color:#aaa;
 }
 
+/* ========= ABOUT ========= */
+.about{
+  display:flex;
+  gap:40px;
+  margin-top:12px;
+}
+
 .about img{
   width:300px;
   height:400px;
-  margin-left:40px;
   object-fit:cover;
+  opacity:.9;
 }
 
-/* ========= PORTFOLIO (INTACTO) ========= */
+/* ========= PORTFOLIO (INTOCABLE) ========= */
 .portfolio-wrapper{
   margin-top:32px;
   margin-left:8px;
+  overflow:hidden;
+  padding-right:120px;
 }
 
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
+  padding-bottom:20px;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{
-  height:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
-  border-radius:6px;
-}
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
 
 .project-card{
   min-width:460px;
@@ -140,60 +120,77 @@ h1{
   transition:.8s ease;
 }
 
-.project-card.is-visible{
-  opacity:1;
-  transform:translateY(0);
+.project-card.is-visible{opacity:1;transform:none}
+
+/* ========= CV TIMELINE ========= */
+.timeline{
+  position:relative;
+  margin-top:60px;
+  padding-left:60px;
 }
 
-/* ========= CV — ESTILO FRAMER ========= */
-.cv-grid{
-  margin-top:40px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:32px;
+.timeline::before{
+  content:"";
+  position:absolute;
+  left:20px;
+  top:0;
+  bottom:0;
+  width:1px;
+  background:rgba(255,255,255,.12);
 }
 
-.cv-card{
-  background:rgba(255,255,255,.03);
-  border:1px solid rgba(255,255,255,.06);
-  border-radius:20px;
-  padding:28px;
+.timeline-item{
+  position:relative;
+  margin-bottom:80px;
+  max-width:520px;
   opacity:0;
   transform:translateY(20px);
   transition:.8s ease;
 }
 
-.cv-card.is-visible{
+.timeline-item.is-visible{
   opacity:1;
-  transform:translateY(0);
+  transform:none;
 }
 
-.cv-card h3{
-  font-size:16px;
-  font-weight:500;
+.timeline-item::before{
+  content:"";
+  position:absolute;
+  left:-44px;
+  top:8px;
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:#fff;
+}
+
+.timeline-card{
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
+  border-radius:20px;
+  padding:28px;
+}
+
+.timeline-card h3{
+  font-size:15px;
   letter-spacing:.15em;
   text-transform:uppercase;
-  margin-bottom:20px;
-}
-
-.cv-item{
   margin-bottom:16px;
 }
 
-.cv-item strong{
-  font-size:15px;
-  font-weight:500;
+.timeline-card strong{
   display:block;
+  font-size:16px;
+  margin-bottom:4px;
 }
 
-.cv-item span{
+.timeline-card span{
   font-size:13px;
   color:#888;
 }
 
 /* ========= FOOTER ========= */
 .footer{
-  padding:20px 0;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
@@ -213,11 +210,7 @@ h1{
 
 <section class="section hero">
   <div class="section-block">
-    <h1>
-      Luis<br>
-      Blasco-Ibáñez<br>
-      Berbel
-    </h1>
+    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
@@ -228,7 +221,7 @@ h1{
     <div class="about">
       <p>
         Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
-        con base técnica y sensibilidad por el proceso completo de diseño.
+        con formación técnica y sensibilidad por el proceso completo de diseño.
       </p>
       <img src="foto.jpg">
     </div>
@@ -241,8 +234,9 @@ h1{
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
         <div class="project-card">NODE</div>
-        <div class="project-card">Sixay</div>
-        <div class="project-card">Exploración</div>
+        <div class="project-card">Sixay · Cómoda</div>
+        <div class="project-card">Exploración material</div>
+        <div class="project-card">Proyecto conceptual</div>
       </div>
     </div>
   </div>
@@ -252,28 +246,45 @@ h1{
   <div class="section-block">
     <h1>CV</h1>
 
-    <div class="cv-grid">
+    <div class="timeline">
 
-      <div class="cv-card">
-        <h3>Formación</h3>
-        <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>Universitat Jaume I</span></div>
-        <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UPV</span></div>
-        <div class="cv-item"><strong>Erasmus</strong><span>Londres</span></div>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
       </div>
 
-      <div class="cv-card">
-        <h3>Idiomas</h3>
-        <div class="cv-item"><strong>Español</strong></div>
-        <div class="cv-item"><strong>Inglés</strong></div>
-        <div class="cv-item"><strong>Húngaro</strong></div>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
       </div>
 
-      <div class="cv-card">
-        <h3>Software</h3>
-        <div class="cv-item"><strong>Rhino · AutoCAD</strong></div>
-        <div class="cv-item"><strong>Inventor · SolidWorks</strong></div>
-        <div class="cv-item"><strong>Fusion 360 · Sinutrain</strong></div>
-        <div class="cv-item"><strong>3ds Max</strong></div>
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
       </div>
 
     </div>
@@ -281,16 +292,16 @@ h1{
 </section>
 
 <script>
-document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.onclick=()=>document.querySelectorAll(".section")[i]
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+const observer=new IntersectionObserver(e=>{
+  e.forEach(x=>x.target.classList.toggle("is-visible",x.isIntersecting));
 },{threshold:.2});
 
-document.querySelectorAll(".project-card,.cv-card")
+document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 </script>
 
