--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@ nav span{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
@@ -140,8 +144,14 @@ nav span{
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
 
 .project-card{
   min-width:460px;
@@ -236,10 +246,11 @@ nav span{
 }
 
 .timeline-card h3{
-  font-size:14px;
-  letter-spacing:.15em;
+  font-size:18px;              /* RESTAURADO */
+  font-weight:500;
+  letter-spacing:.12em;        /* RESTAURADO */
   text-transform:uppercase;
-  margin-bottom:14px;
+  margin-bottom:16px;
 }
 
 .timeline-card strong{
@@ -386,13 +397,11 @@ nav span{
 </section>
 
 <script>
-/* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
-/* OBSERVER */
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
@@ -400,7 +409,6 @@ const observer=new IntersectionObserver(entries=>{
 document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 
-/* TIMELINE LINE PROGRESS */
 const timeline=document.querySelector(".timeline");
 const line=document.getElementById("timelineLine");
 
