--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITULOS DE SECCIÓN (ORIGINAL) ========= */
+/* ========= TITULOS DE SECCIÓN ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -133,7 +133,11 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
@@ -146,8 +150,14 @@ h1{
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
+}
 
 .project-card{
   min-width:460px;
@@ -206,7 +216,6 @@ h1{
   width:2px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .2s linear;
 }
 
 .timeline-item{
@@ -293,7 +302,7 @@ h1{
         una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
         desde la fase de análisis hasta la materialización.
       </p>
-      <img src="foto.jpg">
+      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
@@ -301,9 +310,42 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <!-- proyectos intactos -->
+
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <div class="project-inner">
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
@@ -312,19 +354,61 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
-      <!-- timeline items intactos -->
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
 
 <script>
+/* NAV */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
+/* OBSERVER */
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
@@ -332,6 +416,7 @@ const observer=new IntersectionObserver(entries=>{
 document.querySelectorAll(".project-card,.timeline-item")
   .forEach(el=>observer.observe(el));
 
+/* TIMELINE LINE PROGRESS */
 const timeline=document.querySelector(".timeline");
 const line=document.getElementById("timelineLine");
 
