--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@ body{
   color:#f5f5f5;
   overflow-y:scroll;
   scroll-snap-type:y mandatory;
-  overscroll-behavior:contain;
-}
-
-body.no-snap{
-  scroll-snap-type:none;
+  overscroll-behavior:none;
 }
 
 /* ========= NAV ========= */
@@ -70,13 +66,14 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= CONTACT FIX ========= */
+/* ========= CONTACT FINAL ========= */
 .section-contact{
   scroll-snap-align:none;
   min-height:calc(100vh - 80px);
+  padding-bottom:0;
 }
 
-/* ========= TITLES ========= */
+/* ========= TITULOS ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
@@ -174,101 +171,11 @@ h1{
   transform:none;
 }
 
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ========= CV TIMELINE ========= */
+/* ========= CV ========= */
 .timeline{
   position:relative;
   margin-top:60px;
   padding-left:60px;
-}
-
-.timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
-  background:linear-gradient(#fff,#777);
-  transition:height .25s ease-out;
-}
-
-.timeline-item{
-  position:relative;
-  margin-bottom:80px;
-  max-width:520px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#fff;
-}
-
-.timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
-  padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
 }
 
 /* ========= CONTACT FRAMER ========= */
@@ -335,7 +242,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -343,121 +249,29 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
-    <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
-      </p>
-      <img src="foto.jpg" alt="">
-    </div>
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-      </div>
-    </div>
   </div>
 </section>
 
-<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Jaume I</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Politècnica de València</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
-
-    </div>
   </div>
 </section>
 
-<!-- CONTACTO -->
-<section class="section section-contact" id="contact">
+<section class="section section-contact">
   <div class="section-block">
     <h1>Contacto</h1>
 
     <div class="contact-framer">
-
       <a href="tel:+34600000000" class="contact-card">
         <div class="contact-left">
           <span>Teléfono</span>
@@ -473,35 +287,9 @@ h1{
         </div>
         <div class="contact-arrow">→</div>
       </a>
-
-      <a href="https://www.linkedin.com" target="_blank" class="contact-card">
-        <div class="contact-left">
-          <span>LinkedIn</span>
-          <strong>Perfil profesional</strong>
-        </div>
-        <div class="contact-arrow">→</div>
-      </a>
-
     </div>
   </div>
 </section>
-
-<script>
-const sections = document.querySelectorAll(".section");
-const contact = document.querySelector(".section-contact");
-
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>sections[i].scrollIntoView({behavior:"smooth"});
-});
-
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    document.body.classList.toggle("no-snap", e.isIntersecting);
-  });
-},{threshold:0.6});
-
-observer.observe(contact);
-</script>
 
 </body>
 </html>
